# eventosb

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 34cdfdde6515_added_attendees_to_events.py  39e60a45e0fb_initial.py  3bdbf3cbc509_modified_event.py  70d5f74d966d_initial.py  9229f8fb968b_cascade.py  aa7b1b52df82_modified_event_added_event_attendes.py  f0ce729ea80e_modified_relation_events.py
src/app/: main.py
src/app/certs/: ca-certificate.crt
src/app/core/: config.py  security.py
src/app/db/: base.py  db.py  init_db.py  models.py
src/app/modules/auth/: auth_dto.py  auth_responses.py  auth_router.py  auth_svc.py  guards.py
src/app/modules/boards/: board_dto.py  board_model.py  board_responses.py  board_router.py  board_svc.py
src/app/modules/common/: metadata_schema.py
src/app/modules/event_actions/: event_actions_router.py
src/app/modules/event_attendees/: event_attendees_responses.py  event_attendees_router.py  event_attendees_service.py
src/app/modules/events/: event_attendees_model.py  event_role_enum.py  event_status_enum.py  events_dto.py  events_model.py  events_responses.py  events_router.py  events_service.py
src/app/modules/files/: files_router.py  files_service.py
src/app/modules/tiles/: tile_dto.py  tile_model.py  tile_response.py  tiles_router.py  tiles_svc.py
src/app/modules/users/: user_dto.py  user_reponses.py  user_role_enum.py  users_model.py  users_router.py  users_service.py
